--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*"
+        "laravel/framework": "5.3.*",
+        "laravelcollective/html": "5.3.*",
+        "mpociot/laravel-test-factory-helper": "^0.3.1",
+        "rutorika/sortable": "^3.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
